# stubhouse

./: .gitignore  Cargo.toml  README.md  spec.md
crates/stubhouse-app/: Cargo.toml  tauri.conf.json
crates/stubhouse-app/src/: main.rs
crates/stubhouse-cli/: Cargo.toml
crates/stubhouse-cli/src/: main.rs
crates/stubhouse-core/: Cargo.toml
crates/stubhouse-core/src/: compose.rs  history.rs  http.rs  lib.rs  workspace.rs
scripts/: gen-placeholder-icon.mjs
src-frontend/: index.html  package.json  start-test-api.sh  tailwind.config.js  vite.config.ts
src-frontend/src/: App.svelte  app.css
src-frontend/src/lib/: AuthPane.svelte  BodyEditor.svelte  KeyValueTable.svelte  RequestPane.svelte  ResponsePanel.svelte  Sidebar.svelte  api.ts  workspaceStore.svelte.ts
src-frontend/test-api-server/: README.md  server.ts  test-cases.json
