[package]
name = "stubhouse-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "StubHouse desktop app (Tauri 2 + Svelte 5)"
publish = false

[[bin]]
name = "stubhouse-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
stubhouse-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
